# fastapi-template

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile.example  README.md  docker-compose.yml  env.example  pyproject.toml
app/: config.py  main.py
app/api/: router.py
app/api/di/: __init__.py  application.py  request.py  usecase.py
app/api/utils/: exception_handlers.py  exceptions.py  health_check.py  loggers.py  security.py  usecase.py
app/api/utils/enums/: base_enum.py  env_enum.py  internal_exception_status_enum.py  log_level_enum.py
app/api/utils/middlewares/: csrf_middleware.py  router_logging_middleware.py
app/api/utils/sqlalchemy/: annotated_fields.py  base_db_model.py
app/api/utils/swagger/: default_response.py  docs.py  tags_metadata.py  ui.py
app/api/v1/: __init__.py
app/api/v1/controllers/: role_controller.py  user_controller.py
app/api/v1/crud/: base_crud.py  role_crud.py  user_crud.py
app/api/v1/models/: __init__.py  user_model.py  user_role.py
app/api/v1/schemas/: auth.py  base_schema.py  role_schema.py  user_schema.py
app/api/v1/usecases/role/: create.py  get_all.py  get_by_id.py
app/api/v1/usecases/user/: create.py  delete.py  get_all.py  get_by_id.py
migrations/: enabled_migration_models.py  env.py  script.py.mako
migrations/versions/: 2025-11-04_init.py
tests/: conftest.py  consts.py
tests/api/utils/: test_health_check.py  test_migrations.py  test_swagger_docs.py
tests/api/v1/controller/: test_api.py
